--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <link rel="stylesheet" href="Style sheet M293.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Japanese Language</h1>
+    <nav class="Nav-Items">
+        <a href="Hiragana.html" id="Hiragana">
+            <span class="old-text">Hiragana</span>
+            <span class="new-text">ひらがな</span>
+        </a>
+        <a href="Katakana.html" id="Katakana">
+            <span class="old-text">Katakana</span>
+            <span class="new-text">カタカナ</span>
+        </a>
+        <a href="" id="Vokabular">Vokabular</a>
+    </nav>
+
+    <p>
+        Herzlich willkommen auf meiner Website über die japanischen Alphabete Hiragana und Katakana!
+
+        Möchten Sie Japanisch lernen oder Ihre Kenntnisse vertiefen? Dann sind Sie hier genau richtig! Ich freue mich,
+        Ihnen eine umfassende Einführung in die japanischen Alphabete Hiragana und Katakana zu bieten und Ihnen dabei zu
+        helfen, Ihre Fähigkeiten im Japanischen zu verbessern.
+
+        Hiragana und Katakana sind Silbenschriften, die aus charakteristischen Zeichen bestehen. Mit Hiragana werden
+        hauptsächlich grammatische Partikeln, Verbendungen und Wörter geschrieben, während Katakana vor allem für
+        Lehnwörter aus anderen Sprachen, Namen und betonte Ausdrücke verwendet wird.
+
+        Mein Ziel ist es, Ihnen eine schrittweise Anleitung zu geben, wie Sie Hiragana und Katakana lesen, schreiben und
+        verstehen können. Auf meiner Website finden Sie zahlreiche Lektionen, Übungen und interaktive Materialien, um
+        Ihre Fähigkeiten zu stärken. Egal, ob Sie Anfänger sind oder bereits Vorkenntnisse haben, ich habe Inhalte für
+        alle Lernstufen vorbereitet.
+
+        Darüber hinaus biete ich Ihnen nützliche Informationen über die japanische Kultur, Traditionen und Sprachnuancen
+        an. Ich glaube fest daran, dass das Verständnis der japanischen Schrift und Sprache Ihnen dabei helfen wird,
+        eine tiefere Verbindung zur faszinierenden Kultur Japans aufzubauen.
+
+        Tauchen Sie ein in die Welt von Hiragana und Katakana und entdecken Sie die Schönheit und Präzision der
+        japanischen Schrift. Beginnen Sie Ihre Reise noch heute und erleben Sie die Freude am Erlernen der japanischen
+        Alphabete!
+
+        Ich wünsche Ihnen viel Spaß beim Lernen und freue mich, Sie auf meiner Website begrüßen zu dürfen!
+    </p>
+    <p id="Hiragana-Logo">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nostrum magnam blanditiis
+        alias sed vero
+        sapiente aperiam tempora iusto? Libero sunt veniam minus repellat sint sed similique laboriosam laudantium cum.
+    </p>
+</body>
+
+</html>
