--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="old-text">Katakana</span>
             <span class="new-text">カタカナ</span>
         </a>
-        <a href="" id="Vokabular">Vokabular</a>
+        <a href="Vokabular.html" id="Vokabular">Vokabular</a>
     </nav>
 
     <p>
