--- a/Hiragana.html
+++ b/Hiragana.html
@@ -17,12 +17,12 @@
     <h1>Hiragana</h1>
 
     <nav class="Nav-Items">
-        <a href="LB_M293.html" id="Home">Home</a>
-        <a href="" id="Katakana">
+        <a href="index.html" id="Home">Home</a>
+        <a href="Katakana.html" id="Katakana">
             <span class="old-text">Katakana</span>
             <span class="new-text">カタカナ</span>
         </a>
-        <a href="" id="Vokabular">Vokabular</a>
+        <a href="Vokabular.html" id="Vokabular">Vokabular</a>
     </nav>
 
 
