--- a/Katakana.html
+++ b/Katakana.html
@@ -17,12 +17,12 @@
     <h1>Katakana</h1>
 
     <nav class="Nav-Items">
-        <a href="LB_M293.html" id="Home">Home</a>
+        <a href="index.html" id="Home">Home</a>
         <a href="Hiragana.html" id="Hiragana">
             <span class="old-text">Hiragana</span>
             <span class="new-text">ひらがな</span>
         </a>
-        <a href="" id="Vokabular">Vokabular</a>
+        <a href="Vokabukar.html" id="Vokabular">Vokabular</a>
     </nav>
 
 
