--- a/Vokabular.html
+++ b/Vokabular.html
@@ -10,6 +10,18 @@
 
 <body>
     <h1>Vokabular</h1>
+    
+    <nav class="Nav-Items">
+        <a href="Hiragana.html" id="Hiragana">
+            <span class="old-text">Hiragana</span>
+            <span class="new-text">ひらがな</span>
+        </a>
+        <a href="Katakana.html" id="Katakana">
+            <span class="old-text">Katakana</span>
+            <span class="new-text">カタカナ</span>
+        </a>
+        <a href="" id="Home">Home</a>
+    </nav>
 
     <table>
         <tr>
