--- a/Vokabular.html
+++ b/Vokabular.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>Vokabular</h1>
-    
-    <nav class="Nav-Items">
+     <nav class="Nav-Items">
         <a href="Hiragana.html" id="Hiragana">
             <span class="old-text">Hiragana</span>
             <span class="new-text">ひらがな</span>
@@ -20,9 +19,8 @@
             <span class="old-text">Katakana</span>
             <span class="new-text">カタカナ</span>
         </a>
-        <a href="index.html" id="Home">Home</a>
+        <a href="" id="Home">Home</a>
     </nav>
-
     <table>
         <tr>
             <td>
