--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         alias sed vero
         sapiente aperiam tempora iusto? Libero sunt veniam minus repellat sint sed similique laboriosam laudantium cum.
     </p>
+    <footer>
+    <p>
+        Gemacht von Stefan Jesenko
+    </p>
+    </footer>
 </body>
 
 </html>
