--- a/Vokabular.html
+++ b/Vokabular.html
@@ -190,6 +190,11 @@
         </tr>
 
     </table>
+     <footer>
+    <p>
+        Gemacht von Stefan Jesenko
+    </p>
+    </footer>
 </body>
 
 </html>
