--- a/Katakana.html
+++ b/Katakana.html
@@ -280,6 +280,11 @@
 
         Sprachliche Vielseitigkeit: Durch das Erlernen von Katakana erweitert man seine Fähigkeit, verschiedene Arten
         von Wörtern im Japanischen zu lesen und zu verstehen, einschließlich ausländischer Wörter und Lautmalereien.</p>
+     <footer>
+    <p>
+        Gemacht von Stefan Jesenko
+    </p>
+    </footer>
 
 </body>
 
