--- a/Hiragana.html
+++ b/Hiragana.html
@@ -276,6 +276,11 @@
         Grundlage für weiteres Sprachenlernen aufbauen. Es gibt zahlreiche Ressourcen, darunter Lehrbücher,
         Online-Kurse
         und Übungsblätter, die beim Erlernen von Hiragana unterstützen.</p>
+     <footer>
+    <p>
+        Gemacht von Stefan Jesenko
+    </p>
+    </footer>
 
 </body>
 
