--- a/Vokabular.html
+++ b/Vokabular.html
@@ -85,7 +85,7 @@
                 おいしい
             </td>
             <td>
-                Lekker
+                Lecker
             </td>
         </tr>
         <tr>
