--- a/Katakana.html
+++ b/Katakana.html
@@ -22,7 +22,7 @@
             <span class="old-text">Hiragana</span>
             <span class="new-text">ひらがな</span>
         </a>
-        <a href="Vokabukar.html" id="Vokabular">Vokabular</a>
+        <a href="Vokabular.html" id="Vokabular">Vokabular</a>
     </nav>
 
 
