--- a/Vokabular.html
+++ b/Vokabular.html
@@ -19,7 +19,7 @@
             <span class="old-text">Katakana</span>
             <span class="new-text">カタカナ</span>
         </a>
-        <a href="" id="Home">Home</a>
+        <a href="index.html" id="Home">Home</a>
     </nav>
     <table>
         <tr>
