--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </p>
     
     <footer>
+          <a href="AboutMe.html" id="About-Me">Warum mache ich diese Seite</a>
     <p>
         Gemacht von Stefan Jesenko
     </p>
