--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,6 +24,11 @@
         ich diese Sprache beherschen und auch mal eine Reise nach Japan machen.
         Nach dieser Sprache möchte ich auch andere Sprachen Lernen.
     </p>
+     <footer>
+          <p>
+               Gemacht von Stefan Jesenko
+          </p>
+     </footer>
 </body>
 
 </html>
