--- a/Hiragana.html
+++ b/Hiragana.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<input type="checkbox" id="What-Hiragana">
-<input type="checkbox" id="History-Hiragana">
-<input type="checkbox" id="Sound-Hiragana">
-<input type="checkbox" id="usecases-Hiragana">
-<input type="checkbox" id="learn-Hiragana">
+<html lang="de">
+
 
 <head>
     <link rel="stylesheet" href="Hiragana.css">
@@ -14,6 +10,11 @@
 </head>
 
 <body>
+<input type="checkbox" id="What-Hiragana">
+<input type="checkbox" id="History-Hiragana">
+<input type="checkbox" id="Sound-Hiragana">
+<input type="checkbox" id="usecases-Hiragana">
+<input type="checkbox" id="learn-Hiragana">
     <h1>Hiragana</h1>
 
     <nav class="Nav-Items">
