--- a/Vokabular.html
+++ b/Vokabular.html
@@ -190,6 +190,9 @@
         </tr>
 
     </table>
+    <p>
+        Ein großes Vokabular ist in einer Sprache wichtig, da es die Fähigkeit erhöht, Ideen präzise und nuanciert auszudrücken. Mit einem breiten Wortschatz kann man sich besser verständigen und komplexe Konzepte vermitteln. Zudem ermöglicht es eine effektive Kommunikation und verhindert Missverständnisse. Ein umfangreiches Vokabular ermöglicht es auch, andere Texte und Gespräche besser zu verstehen und sich in unterschiedlichen Situationen angemessen auszudrücken. Es unterstützt die Entwicklung von Leseverständnis und schriftlicher Ausdrucksfähigkeit. Ein reichhaltiges Vokabular ermöglicht es, sich differenziert auszudrücken und sich in verschiedenen sozialen und beruflichen Umfeldern anzupassen. Darüber hinaus fördert es die kognitive Flexibilität und das Denkvermögen, indem es verschiedene Perspektiven und Konzepte umfasst. Ein breites Vokabular bereichert auch das persönliche Wissen und die kulturelle Sensibilität, da es den Zugang zu verschiedenen Ideen und Erfahrungen erweitert.
+    </p>
      <footer>
     <p>
         Gemacht von Stefan Jesenko
